counts tiny change

--- a/index.html
+++ b/index.html
@@ -427,6 +427,94 @@ histogram.getValueAtPercentile(99.9);
 </section>
 
 
+
+<section data-transition="fade">
+<h3>long counts[]</h3>
+<table>
+	<tr>
+		<td>&nbsp;</td>
+		<td></td>
+		<td></td>
+		<td></td>
+
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+	</tr>
+</table>
+
+<table>
+	<tr>
+		<td>&nbsp;</td>
+		<td></td>
+		<td></td>
+		<td></td>
+
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		
+	</tr>
+</table>
+
+<table class="schema">
+	<tr>
+		<td>0</td>
+		<td>4</td>
+		<td>1</td>
+		<td>0</td>
+		
+		<td>3</td>
+		<td>8</td>
+		<td>4</td>
+		<td>1</td>
+		
+		<td>9</td>
+		<td>2</td>
+		<td>1</td>
+		<td>0</td>
+		
+		<td>0</td>
+		<td>7</td>
+		<td>2</td>
+		<td>0</td>
+		
+	</tr>
+</table>
+
+</section>
+
+<section>
+	<h1>High</h1>
+	<h1>Dynamic</h1>
+	<h1>Range</h1>
+</section>
+
+
+
 <section data-transition="fade">
 	<h1>123 000</h1>
 </section>
