Tiny style change

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 </section>
 <section>
 	<h3>HdrHistogram</h3>
-	<img src="golang.png" width="10%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="python.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="The_C_Programming_Language_logo.svg.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="Duke-Guitar.png" width="20%" style="border: 0px" />
-	<img src="csharp.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="Erlang_logo.svg.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="Rust_programming_language_black_logo.svg.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
-	<img src="Unofficial_JavaScript_logo_2.svg.png" width="13%" style="border: 0px" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="golang.png" width="10%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="python.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="The_C_Programming_Language_logo.svg.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="Duke-Guitar.png" width="20%" style="border: 0px; box-shadow: 0 0 0 0" />
+	<img src="csharp.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="Erlang_logo.svg.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="Rust_programming_language_black_logo.svg.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
+	<img src="Unofficial_JavaScript_logo_2.svg.png" width="13%" style="border: 0px; box-shadow: 0 0 0 0" class="fragment fade-up" data-fragment-index="1"/>
 	<aside class="notes">
 		HdrHistogram permet de gérer des histograms, des statistiques sur des temps de réponses et du comportement d'un ssystème
 		Java et d'autre technos
@@ -150,16 +150,16 @@
 
 </section>
 
-<section section data-background-color="#FFF" data-background-iframe="./Anscombe/index.html">
+<section data-background-color="#FFF" data-background-iframe="./Anscombe/index.html">
 	<aside class="notes">
 	Pour démarer en douceur
 	les moyennes c'est bien mais c'est rarement suffisant
 	</aside>
 </section>
-<section>
+<section data-background-color="#FFF">
 	<!--<img src="be_above_average.jpg" />-->
 	<h3>DON'T BE MEAN BE ABOVE AVERAGE</h3>
-	<img src="normal.png" style ="border: 0px" />
+	<img src="normal.png" width="70%" style ="border: 0px; box-shadow: 0 0 0 0" />
 	<aside class="notes">
 		Moyenne c'est surti utile lorsque les valeurs sont réparti suivant une loi normale
 		C'est le cas quand on a des valeurs aléatoires
